--- a/.env
+++ b/.env
@@ -5,4 +5,4 @@ REFRESH_TOKEN = refresh_token
 RESET_TOKEN = reset_token
 MAIL_PASSWORD = dxvz ojcw dqzz lrvs
 MAIL_ACCOUNT = jnluan09@gmail.com
-CLIENT_URL = https://nhasachhyvong-kp2oq9tul-jns-projects-e8ac6081.vercel.app
+CLIENT_URL = https://bookstore-nine-taupe.vercel.app
